fix propper color for collapse menu symbol in light mode

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -181,4 +181,8 @@ input {
   .rooms-inner-content{
     background-color: black !important;
   }
+
+  .burger-color{
+    background-color: #212529 !important;
+  }
 }
